2011-05-06  Dario Rodriguez <dario.rodriguez@artica.es>

	* include/graphs/functions_gd.php: Added new parameter to function
	gd_progress_bar.

2011-05-06  Junichi Satoh  <junichi@rworks.jp>

	* godmode/alerts/alert_list.list.php: Fixed filter parameters are not
	taken over with offset selection.

2011-05-05  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/configurar_agente.php
	godmode/agentes/module_manager_editor.php: Added the feature of
	edit the modules from the agent config or create a module from
	a local component or manually

2011-05-05 Miguel de Dios  <miguel.dedios@artica.es>
	* pandoradb.sql, pandoradb.postgreSQL.sql,
	extras/pandoradb_migrate_v3.2_to_v4.0.sql: changed the default value for
	zero/null date "0000-00-00 00:00:00" to "01-01-1970 00:00:00".

	* include/functions_graph.php,include/db/postgresql.php,
	include/functions_modules.php, include/functions_agents.php,
	operation/agentes/alerts_status.php,
	operation/agentes/estado_generalagente.php,
	operation/agentes/estado_agente.php, operation/agentes/exportdata.php,
	operation/agentes/ver_agente.php, operation/servers/view_server.php,
	operation/gis_maps/ajax.php, godmode/db/db_sanity.php,
	godmode/agentes/agent_template.php,
	godmode/agentes/module_manager_editor_network.php,
	godmode/agentes/configurar_agente.php, godmode/servers/plugin.php,
	godmode/snmpconsole/snmp_alert.php: small fixeds for the support the
	PostgreSQL engine.

2011-05-04 Vanessa Gil <vanessa.gil@artica.es>

	*  operation/agentes/estado_agente.php: Fixed error on list of agents

2011-05-03  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_reporting_advanced_tab.php: Added a missing
	help file.

2011-05-03  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php: Clean code
	merged from integria library

2011-05-02 SAncho Lerena <slerena@artica.es>

	*  include/help/en/help_reporting_advanced_tab.php,
	include/help/es/help_reporting_advanced_tab.php: Missing help
	files.
