@@ -1,3 +1,8 @@
+2011-05-09 Miguel de Dios  <miguel.dedios@artica.es>
+
+	* pandoradb.postgreSQL.sql: fixed the type of cell "id_agente_modulo" in the
+	table "tagente_datos_string".
+
 2011-05-06  Dario Rodriguez <dario.rodriguez@artica.es>
 
 	* include/graphs/functions_gd.php: Added new parameter to function
